# AI-ML-DS-Bootcamp

./: .gitignore  README.md
.ipynb_checkpoints/: environment-checkpoint.yml
Milestone-Projects/: end-to-end-bluebook-bulldozer-price-regression-video.ipynb  end-to-end-heart-disease-classification-video.ipynb  end-to-end-heart-disease-classification.ipynb
Milestone-Projects/bulldozerPricePredictionProject/: end-to-end-bluebook-bulldozer-price-regression.ipynb
Milestone-Projects/bulldozerPricePredictionProject/.ipynb_checkpoints/: end-to-end-bluebook-bulldozer-price-regression-checkpoint.ipynb
Milestone-Projects/danielWork/heartDiseaseProject/: end-to-end-heart-disease-classification.ipynb
Milestone-Projects/heartDiseaseProject/: end-to-end-heart-disease-classification.ipynb
course/: Introduction-to-Matplotlib.ipynb  example.ipynb
course/.ipynb_checkpoints/: introduction-to-pandas-checkpoint.ipynb
course/DL/: dog-vision.ipynb
course/ML/: introduction-to-pandas.ipynb
data/: test_predictions.csv
exercises/: scikit-learn-exercises.ipynb
models/: gs_random_forest_model_1.joblib  random_forst_model_1.pkl  random_forst_model_1_7.pkl
py/: calculaor.py  file.py  grade.py  hello.py  itunes.py  test_calculaor.py
py/42-Pool/Starting/ex00/: Hello.py
py/42-Pool/Starting/ex04/: whatis.py
py/42-Pool/Starting/ex09/: file.txt  pyproject.toml
py/42-Pool/Starting/ex09/ft_package/: module.py
py/42-Pool/Starting/ex09/ft_package.egg-info/: SOURCES.txt
py/tutorials/: compare.py  house.py
py/tutorials/start/: calculaor.py  file.py  say.py
(+44 files in other folders)
