[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"  # Name of your package
version = "0.0.2"    # Version of your package
description = "A simple Python package"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Khalil Sohail", email = "khalilsohail24@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.6"  # Correct property name

[tool.setuptools.packages.find]
where = ["."]
